--- a/kmarket_shopping/pubspec.yaml
+++ b/kmarket_shopping/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.5.0
+  flutter_secure_storage: ^9.2.4
+  provider: ^6.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
